--- a/dev/scss/sections/_dining-and-shopping.scss
+++ b/dev/scss/sections/_dining-and-shopping.scss
@@ -16,24 +16,31 @@
 
        #ds-title{
            grid-area: title;
+           text-align: center;
        }
        #ds-sub1{
            grid-area: sub;
+           text-align: center;
        }
        #ds-button1{
            grid-area: b1;
+           text-align: center;
        }
        #ds-button2{
         grid-area: b2;
+        text-align: center;
     }
     #ds-button3{
         grid-area: b3;
+        text-align: center;
     }
     #ds-button4{
         grid-area: b4;
+        text-align: center;
     }
     #ds-button5{
         grid-area: b5;
+        text-align: center;
     }
 
     @include lg{
@@ -69,12 +76,7 @@
  #ds-button5{
      grid-area: b5;
  }
-
- 
-
    
-
-        
     }
 
     @include xl{
@@ -120,21 +122,33 @@
 #shopping{
     #img-outlet{
         background-image: url("../img/shopping/shopping1.jpg");
-        background-position: center;
+        background-position: top;
         background-size: cover;
-        height: 228px;
+        height: 250px;
+        @include md{
+            height: 350px;
+        }
     }
     #img-mall{
         background-image: url("../img/shopping/shopping2.jpg");
         background-position: center;
         background-size: cover;
-        height: 228px;
+        height: 250px;
+        @include md{
+            height: 350px;
+        }
     }
     #img-business{
         background-image: url("../img/local-businesses/business.jpg");
         background-position: center;
         background-size: cover;
-        height: 600px;
+        height: 325px;
+        @include md{
+            height: 479px;
+        }
+        @include md{
+            height: 679px;
+        }
     }
 ul{
     li{
@@ -163,6 +177,24 @@ ul{
     }
     #ds-mall{
         grid-area: mall;
+    }
+
+    @include md{
+        display: grid;
+       grid-template-columns: 140px auto 140px;
+       grid-template-areas: 
+       ". sub2 ."
+       ". outlet ."
+       ". mall .";
+       #ds-sub2{
+        grid-area: sub2;
+    }
+    #ds-outlet{
+        grid-area: outlet;
+    }
+    #ds-mall{
+        grid-area: mall;
+    }
     }
 
     @include lg{
