--- a/dev/scss/sections/_places-to-stay.scss
+++ b/dev/scss/sections/_places-to-stay.scss
@@ -1,31 +1,40 @@
 #places-to-stay{
 
+    .pts-img-ht{
+        height: 220px;
+
+        @include md{
+        height: 439px;
+        }
+
+        @include lg{
+            height: 940px;
+        }
+
+    }
+
     #pts-img1{
         background-image: url("../img/places-to-stay/stay1.jpg");
     background-position: center;
     background-size: cover;
-    height: 600px;
     }
 
     #pts-img2{
         background-image: url("../img/places-to-stay/stay2.jpg");
     background-position: center;
     background-size: cover;
-    height: 600px;
     }
 
     #pts-img3{
         background-image: url("../img/places-to-stay/stay3.jpg");
     background-position: center;
     background-size: cover;
-    height: 600px;
     }
 
     #pts-img4{
         background-image: url("../img/places-to-stay/stay4.jpg");
     background-position: center;
     background-size: cover;
-    height: 600px;
     }
 
     @include xl{
