--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -21,3 +21,15 @@ $screen-xl-hero-2-min: 1350px;
 // Colors
 $white: #fff;
 $black: #000;
+$darkblue: #15344F;
+$lightblue: #B3ECFF;
+$green: #0A7A2A;
+$greenblue: #249379;
+$lightgreen: #C8F8D6;
+
+
+
+
+
+
+
