--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -1,3 +1,23 @@
 /* =============
     Typography
 ============= */
+html,body,h1,h2,h3,h4,h5 {
+    font-family: 'Dosis', sans-serif;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    padding: 0;
+    margin: 0;
+}
+
+p {
+    padding: 0;
+    margin: 0;
+}
+
+p,input,button,address, h6{
+    font-family: 'Karla', sans-serif;
+}
+
+
+
