--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -1,3 +1,22 @@
 /* =============
     Buttons
 ============= */
+
+button{
+    border-radius: 10px;
+    background-color: $green;
+    color: $lightblue;
+	border: none;
+	cursor: pointer;
+	font-size: rem-calc(16);
+	font-variation-settings: "wght"600;
+	font-weight: 600;
+	padding: 10px;
+	transition: 0.25s;
+	&:hover {
+		background-color: $darkblue;
+		color: $lightblue;
+
+     
+}
+}
