--- a/dev/scss/sections/_places-to-stay.scss
+++ b/dev/scss/sections/_places-to-stay.scss
@@ -61,6 +61,7 @@
             >button{
                 display: flex;
                 border: none;
+                border-radius: 5px;
             }
         }
         }
